# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import sessionsRouter from "./sessions";
 import emailRouter from "./email";
+import themesRouter from "./themes";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use("/auth", authRouter);
 router.use("/sessions", sessionsRouter);
 router.use("/email", emailRouter);
+router.use("/themes", themesRouter);
 
 export default router;
